@startuml
'https://plantuml.com/state-diagram

hide empty description

Initialization -r-> Draft : none
Draft --> Moderation : ←publish as user:\nsend to review
Draft --> Published : ←publish\nas admin
Moderation --> Published : ←review passed\n(moved by admin)
Moderation --> Draft : ←review\nfailed
Published -> [*]
Published --> Draft : ←document\nexpired

@enduml
